--- a/projects/web/templates/lost_pets/_lost_animals_list.html.twig
+++ b/projects/web/templates/lost_pets/_lost_animals_list.html.twig
@@ -14,8 +14,9 @@
 				{% if primaryPhoto %}
 					<img src="{{ asset(primaryPhoto.filePath) }}" alt="{{ animal.name }}" class="w-full h-48 object-cover"/>
 				{% else %}
-					<div class="w-full h-48 bg-gray-200 flex items-center justify-center">
-						{% include 'components/Icon.html.twig' with {name: 'paw', size: 48, class: 'text-gray-400'} %}
+					<div class="w-full h-48 bg-gradient-to-r from-blue-100 to-blue-200 flex items-center justify-center">
+						{% set iconClass = animal.animalType|lower == 'perro' ? 'fa-dog' : (animal.animalType|lower == 'gato' ? 'fa-cat' : (animal.animalType|lower == 'ave' ? 'fa-dove' : (animal.animalType|lower == 'conejo' ? 'fa-feather' : 'fa-paw'))) %}
+						<i class="fas {{ iconClass }} text-4xl text-blue-600"></i>
 					</div>
 				{% endif %}
 				<div class="absolute top-2 right-2 bg-red-500 text-white px-2 py-1 rounded-full text-xs font-medium">{{ animal_status_label(animal.status) }}</div>
