WEB | fix: typo

--- a/projects/web/templates/lost_pets/create.html.twig
+++ b/projects/web/templates/lost_pets/create.html.twig
@@ -295,6 +295,6 @@
    </div>
 
     <script src="{{ asset('page/lost_pets/create_image_upload.js') }}"></script>
-	<script src="{{ asset('page/lost_pets/create._steps.js') }}"></script>
+    <script src="{{ asset('page/lost_pets/create_steps.js') }}"></script>
 
 {% endblock %}
